--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,6 +122,9 @@ set(${PROJECT_NAME}_SOURCE_FILES
 # target_compile_options(${PROJECT_NAME} PRIVATE
 # ${CPP_COMFILE_FLAGS}
 # )
+# include(cmake/create_documents.cmake)
+
+# add_subdirectory(${${PROJECT_NAME}_TEST_PATH})
 message(STATUS)
 message(STATUS "Finished all process in ${PROJECT_NAME} CMakeLists.txt.")
 message(STATUS)
